Fix alignment of announcements and projects sections

--- a/styles.css
+++ b/styles.css
@@ -256,7 +256,7 @@ body {
   align-items: center;
   margin-top: 10%;
   margin-left: 2%;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 500;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   padding-left: 5.5%;
@@ -276,17 +276,21 @@ body {
 }
 
 .layout{
+  display: grid;
   width: 90%;
   position:fixed;
   margin-bottom: 40%;
   padding-bottom: 60%;
+  justify-content: space-between;
+  align-items: center; 
 }
 
 .projects{
+  flex: 1;
   display: grid;
   grid-template-columns: auto auto ;
   gap: 30px;
-  padding-left: 7% ;
+  padding-left: 8% ;
   padding-right: 35%;
   margin-bottom: 10%;
 }
@@ -300,13 +304,13 @@ body {
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 14px;
   font-weight: 600;
   padding: 8px;  
 }
 
 .description {
-  font-size: 18px;
+  font-size: 12px;
   padding: 8px;
   color: rgb(81, 79, 79);
 }
@@ -352,6 +356,15 @@ h3 {
   padding-bottom: 2%;
 }
 
+.heading-container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 22%;
+  padding-top: 2%;
+  padding-left: 3%;
+}
+
 .buttons {
   border: none;
   background-color: #6256CA;
@@ -364,4 +377,59 @@ h3 {
 
 .buttons:hover {
   background-color: #05033a; /* Darker shade on hover */
+}
+
+.announcement-title,
+.announcement-description {
+    padding: .3em;
+}
+
+.announcements-header {
+    grid-column: 3/4;
+    margin-top: 9%;
+    font-weight: 500;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.announcement-heading{
+  font-size: 16px;
+
+}
+
+.right-content-container {
+   grid-column: 3/4;
+   grid-row: 2/10;
+   display: grid;
+   grid-template-columns: 1fr;
+   grid-template-rows: repeat(auto-fill, minmax(40px, 1fr));
+   margin-top: 16%;
+   margin-left: 70%;
+}
+
+.announcements-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding-right: 5%;
+  flex: 1;
+}
+
+.announcement-title {
+  font-size: 14px;
+  padding-bottom: .1em;
+  font-weight: 700;
+}
+
+.announcement-description {
+  font-size: 12px;
+  color: #6c757d;
+}
+
+.announcement-divider {
+  margin: .3em 0;
+}
+
+.announcement {
+  background-color: white;
+  border-radius: 10px;
+  padding: 1em;
 }
